static/css/sheets.css
/* ... */
/* overrides for layout option by source */
#sheet .source.sheetItem.sideBySide > .en {
	float: left;
	display: block;
	width: 48%;

}

#sheet .source.sheetItem.sideBySide > .he {
	float: right;
	display: block;
	width: 48%;
}


#sheet .source.sheetItem.sideBySide.hebLeft > .en {
	float: right;
	display: block;
	width: 48%;
}

#sheet .source.sheetItem.sideBySide.hebLeft > .he {
	float: left;
	display: block;
	width: 48%;
}

#sheet .source.sheetItem.sideBySide.hebRight > .he {
	float: right;
	display: block;
	width: 48%;

}

#sheet .source.sheetItem.sideBySide.hebRight > .en {
	float: left;
	display: block;
	width: 48%;

}



#sheet .source.sheetItem.stacked > .en, 
#sheet .source.sheetItem.stacked > .he {	
	float: none;
	width: 100%;
	margin-bottom: 12px;
}


#sheet .source.bilingual .en,
#sheet .source.bilingual .he,
#sheet .source.english .en,
#sheet .source.hebrew .he {
	display: block;
} 


#sheet .source.english > .he {
	display: none;
}

#sheet .source.hebrew > .en {
	display: none;
}


#resetToDefaults {
margin-top:10px;
text-decoration: underline;
cursor: pointer;
}

